# cf-tempmail-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md  git
.github/workflows/: release.yml
src/: api.rs  config.rs  main.rs
